# xalchemy_lab

./: .gitignore  README.md  erver:app --reload  pyproject.toml  run.sh  run_termux_http.sh  summon
config/: app.toml  contact_sheet.toml  render.toml  state_sheet.toml
export/: batched_vertex_walk_demo.json  holonomic_loop_probe_v0_1.json  multi_controller_holonomy_probe_v0_1.json  trurtle_walk.json  vertex_walk_demo.json
g900/: README.md
http/: README.md  api_server.py  app.js  cube_test.html  cube_view.js  g900.html  index.html  petersen.html  proof.html  styles.css  viewer.html  xyzti.html
notes/: ACTUAL_COCYCLE_DERIVATION_NOTE.md  ACTUAL_EDGE_BRIDGE_CHECKPOINT_R_PLUS_2_NOTE.md  ACTUAL_SIGNED_LIFT_INPUT_MISSING_NOTE.md  ALGEBRAIC_PROPOSITION_CLUSTER_SUPPORT_OF_CLASS_SPLIT.md  ALGEBRAIZATION_RESULT_NOTE.md  ANCHORED_CONTROL_GRAMMAR_RESULT.md  ANCHOR_FAN_GEOMETRY_NOTE.md  ARTIFACT_DRIVEN_BRIDGE_CHECKPOINT_NOTE.md  ASSET_REVIEW_CHECKPOINT.md  BRIDGE_LANGUAGE_UPGRADE_NOTE.md  CANDIDATE_G60_PACKET_SCHEMA_V1.md  CANONICAL_STATE_SPACE_SPEC_V1.md  CARDINALITY_THRESHOLD_REMOTE_REENTRY.md  CHART_RELATIVE_VS_PHYSICAL_COVARIANCE_NOTE.md  CLASS_BASED_BRIDGE_REPRESENTATIVES_NOTE.md  CLI_NOTE.md  CLUSTERED_CORE_LAW_NOTE.md  CLUSTER_INVARIANT_ANSATZ.md  COHERENT_NWAY_SPLIT_LAW_POLARITY_SYMMETRIC.md  CONJECTURE_REGISTER_V0_1.md  CORE_BOUNDARY_ROBUSTNESS_RESULT.md  CORE_COMPENSATION_LAW_NOTE.md  CUBE_SPARK_PHI3_X2_CYCLE.md  DELAYED_TRIAD_ASSEMBLY_NOTE.md  DERIVATION_OF_FRAMED_RETURN_INVARIANT_V0_1.md  DERIVATION_OF_STATE_SENSITIVE_ROUTING_TABLE_V0_1.md  EM_COMPASS_STATUS.md  (+396 more)
(+777 files in other folders)
