[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "xalchemy-lab"
version = "0.1.0"
description = "Alchemy Lab app and paper artifacts"
readme = "notes/CLI_NOTE.md"
requires-python = ">=3.11"

[project.scripts]
summon = "xalchemy_lab.app.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
